Add codebase section with GitHub repository link

--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -730,6 +730,10 @@ The combination of 117$\times$ speedup for molecular simulations and 80$\times$ 
 
 We thank Dr. Khanal for guidance on parallelization strategies and HPC methodologies in MA453 High Performance Computing. This work was conducted on the ERAU Vega HPC cluster featuring AMD EPYC 9654 processors and NVIDIA GPU accelerators. The quantum simulations used the PennyLane quantum computing framework with Lightning backend, JAX for automatic differentiation, and Catalyst for JIT compilation.
 
+\section{Codebase}
+
+All source code can be accessed at https://github.com/rylanmalarchick/QuantumVQE
+
 \begin{thebibliography}{9}
 
     \bibitem{peruzzo2014}
