Update report figures: add cleaner multi-GPU plot, use scaling_comparison
- Replace multi_gpu_summary.png with new multi_gpu_clean.png (2-panel layout)
- Update scaling study figure to use scaling_comparison.png
- Add plot_multi_gpu_clean.py script for generating the new figure
- Update figure captions to match new layouts

--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -550,6 +550,15 @@ Figure~\ref{fig:performance} shows comprehensive performance analysis across all
     \label{fig:performance}
 \end{figure}
 
+Figure~\ref{fig:multi_gpu} summarizes the multi-GPU benchmark results.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{../results/multi_gpu/multi_gpu_clean.png}
+    \caption{Multi-GPU benchmark on 4$\times$ NVIDIA H100: (a) GPU memory scaling with qubit count, showing the 80GB limit and maximum achieved simulation size of 29 qubits, (b) Multi-GPU speedup demonstrating 4.0$\times$ improvement with 99.4\% parallel efficiency.}
+    \label{fig:multi_gpu}
+\end{figure}
+
 \section{Discussion}
 
 \subsection{Physical Interpretation of Results}
